--- a/index.html
+++ b/index.html
@@ -14,3 +14,19 @@
 
 </body>
 </html> 
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <title>رسوماتي</title>
+</head>
+<body>
+
+<h1>لوحاتي الفنية 🎨</h1>
+
+<img src="art1.jpg" alt="لوحة فنية" width="300">
+
+<p>السعر: 500 جنيه</p>
+
+</body>
+</html>
