--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <h1>لوحاتي الفنية 🎨</h1>
 
-<img src="art1.jpg" alt="لوحة فنية" width="300">
+<img src="f5190dcf-8100-4e54-890b-abbdac67f286.jpeg" alt="لوحة فنية" width="300">
 
 <p>السعر: 500 جنيه</p>
 
