--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>لوحاتي الفنية 🎨</h1>
+<h1>(Screenprint)لوحاتي الفنية 🎨</h1>
 
 <img src="IMG_9289.jpeg" alt="لوحة فنية" width="300">
 
