--- a/index.html
+++ b/index.html
@@ -35,3 +35,6 @@
 <a href="https://wa.me/201205928476?text=مرحبا،%20عايز%20أشتري%20اللوحة%20دي" target="_blank">
   <button>اشتري الآن عبر واتساب</button>
 </a>
+<a href=""https://www.instagram.com/colors_by_nermin_?igsh=MTFidjU3bWppcDdhcQ== target="_blank">
+راسلني على إنستجرام
+</a>
