--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 </html>
 
 
-<a href="https://instagram.com/https://www.instagram.com/colors_by_nermin_?igsh=MTFidjU3bWppcDdhcQ==" target="_blank">
+<a href="https://instagram.com/https:/colors_by_nermin_" target="_blank">
 راسلني على إنستجرام
 </a>
