--- a/index.html
+++ b/index.html
@@ -32,6 +32,5 @@
 </html>
 
 
-<a href="https://instagram.com/https:/colors_by_nermin_" target="_blank">
-راسلني على إنستجرام
-</a>
+<img src="path/to/your-image.jpg" alt="Artwork">
+<p>تابعوني على إنستجرام: <a href="https://instagram.com/colors_by_nermin" target="_blank">@اسم_حسابك</a></p>
