--- a/index.html
+++ b/index.html
@@ -34,3 +34,12 @@
 
 <img src="path/to/your-image.jpg" alt="Artwork">
 <p> إنستجرام: <a href="https://instagram.com/colors_by_nermin_" target="_blank">@colors_by_nermin_</a></p>
+
+
+‏  <a href="https://tiktok.com/@nerminfawzyy" target="_blank">
+‏    <img src="tiktok-icon.png" alt="TikTok">
+‏  </a>
+‏  <a href="https://wa.me/01205924206" target="_blank">
+‏    <img src="whatsapp-icon.png" alt="WhatsApp">
+‏  </a>
+‏</div>
