--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 <p> إنستجرام: <a href="https://instagram.com/colors_by_nermin_" target="_blank">@colors_by_nermin_</a></p>
 
 
-‏  <a href="https://tiktok.com/@nerminfawzyy" target="_blank">
-‏    <img src="tiktok-icon.png" alt="TikTok">
-‏  </a>
-‏  
-
-
 
 <a href="https://wa.me/201205924206?text=مرحبا،%20عايز%20أشتري%20اللوحة%20دي" target="_blank"
   <button>   واتساب</button>
+</a>
+
+
+<!-- رابط تيك توك -->
+<a href="https://www.tiktok.com/nerminfawzyy" target="_blank" rel="noopener" aria-label="TikTok">
+  <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M9 7v6a3 3 0 1 0 3.5 2.83V6h3V3.5A7 7 0 1 1 9 7z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
 </a>
