--- a/index.html
+++ b/index.html
@@ -131,4 +131,6 @@
 </body>
 </html>
 
-<img src="IMG_9289.jpeg" onclick="this.requestFullscreen()">
+<img src="images/growth.jpg" onclick="this.requestFullscreen()">
+<body oncontextmenu="return false">
+  <button onclick="alert('Coming Soon')">English</button>
