--- a/index.html
+++ b/index.html
@@ -12,6 +12,45 @@
 
   <style>
     body {
+   <section class="hero">
+  <div class="hero-text">
+    <h1>Nermin Art Studio</h1>
+    <p>Digital Art • Prints • Creative Expression</p>
+  </div>
+</section>
+
+.hero {
+  height: 70vh;
+  background: url("images/cover.jpg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-text {
+  background: rgba(0,0,0,0.5);
+  color: white;
+  padding: 20px 30px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.hero-text h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+<div class="card">
+  <img src="IMG_9289.jpeg" alt="Flow Artwork">
+  <div class="info">
+    <div class="title">Flow</div>
+    <div class="price">EGP 435</div>
+    <a class="btn" href="https://wa.me/201000000000?text=عايز%20أشتري%20Flow">
+      اطلب عبر واتساب
+    </a>
+  </div>
+</div>
+      
       margin: 0;
       font-family: Arial, sans-serif;
       background: #f6f3ee;
