--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nermin Art Gallery</title>
+  <title>Nermin Art Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
     body {
-      background: #f5f5f5;
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #fafafa;
       color: #222;
     }
 
-    /* HEADER */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
-      background: #fff;
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      background: #ffffff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     .logo {
@@ -35,88 +27,65 @@
       font-size: 20px;
     }
 
-    #menu-toggle {
-      display: none;
-    }
-
-    .menu-icon {
-      font-size: 26px;
+    .menu {
+      font-size: 22px;
       cursor: pointer;
-      display: none;
     }
 
-    nav {
-      display: flex;
-      gap: 20px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #222;
-      font-weight: 500;
-    }
-
-    /* HERO */
     .hero {
-      padding: 40px 20px;
       text-align: center;
-    }
-
-    .hero img {
-      width: 100%;
-      max-width: 420px;
-      border-radius: 12px;
-      margin-bottom: 25px;
+      padding: 50px 20px;
     }
 
     .hero h1 {
-      font-size: 26px;
+      font-size: 28px;
       margin-bottom: 15px;
     }
 
     .hero p {
-      color: #555;
-      line-height: 1.7;
-      margin-bottom: 25px;
-      font-size: 15px;
+      font-size: 16px;
+      max-width: 500px;
+      margin: auto;
+      margin-bottom: 30px;
+      line-height: 1.6;
     }
 
-    .hero button {
+    .hero img {
+      width: 100%;
+      max-width: 350px;
+      border-radius: 15px;
+      margin-bottom: 25px;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .btn {
+      padding: 12px 25px;
+      border-radius: 25px;
+      border: none;
+      font-size: 14px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .btn-shop {
       background: #111;
       color: #fff;
-      border: none;
-      padding: 14px 30px;
-      border-radius: 30px;
-      font-size: 16px;
-      cursor: pointer;
     }
 
-    /* MOBILE MENU */
-    @media (max-width: 768px) {
-      .menu-icon {
-        display: block;
-      }
-
-      nav {
-        position: absolute;
-        top: 60px;
-        right: 0;
-        background: #fff;
-        flex-direction: column;
-        width: 220px;
-        padding: 20px;
-        display: none;
-      }
-
-      #menu-toggle:checked + label + nav {
-        display: flex;
-      }
+    .btn-about {
+      background: #ddd;
+      color: #111;
     }
 
-    /* FOOTER */
     footer {
       text-align: center;
-      padding: 30px 15px;
+      padding: 20px;
       font-size: 13px;
       color: #777;
     }
@@ -125,49 +94,41 @@
 
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <div class="logo">Nermin Art</div>
+<header>
+  <div class="logo">Nermin Art</div>
+  <div class="menu">☰</div>
+</header>
 
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="menu-icon">☰</label>
+<section class="hero">
+  <img src="IMG_9288.jpeg" alt="Nermin Art">
 
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  <h1>Welcome to Nermin Art Studio</h1>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <img src="IMG_9288.jpeg" alt="Nermin Artwork">
+  <p>
+    Welcome to my creative space 🤍  
+    I’m Nermin, an artist who turns emotions into visual stories.  
+    Here you’ll find art prints inspired by feelings, growth, and inner peace.  
+    <br><br>
+    أهلاً بيكم في عالم فني  
+    أنا نرمين، فنانة بحب أحول المشاعر لحكايات مرسومة.
+  </p>
 
-    <h1>
-      Welcome to Nermin’s Art World  
-      <br>
-      أهلاً بيك في عالم نرمين الفني
-    </h1>
-
-    <p>
-      I’m Nermin, an artist who expresses emotions, faith, and stories through colors and details.  
-      <br><br>
-      أنا نرمين، فنانة بعبر عن مشاعري وإيماني وحكاياتي من خلال اللوحات والألوان.
-      هنا هتلاقي أعمال فنية أصلية ونسخ مطبوعة بجودة عالية.
-    </p>
-
-    <button>
+  <div class="buttons">
+    <!-- زرار التسوق -->
+    <a href="shop.html" class="btn btn-shop">
       Shop Art Prints | تسوق اللوحات
-    </button>
-  </section>
+    </a>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2026 Nermin Art Gallery — All Rights Reserved  
-    <br>
-    جميع الحقوق محفوظة
-  </footer>
+    <!-- زرار عني -->
+    <a href="#" class="btn btn-about">
+      About Me | عني
+    </a>
+  </div>
+</section>
+
+<footer>
+  © 2026 Nermin Art Studio
+</footer>
 
 </body>
 </html>
