--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <!-- HERO -->
 <section class="hero" id="home">
-  <img src="IMG_9288.jpeg" alt="Nermin Art">
+  <img src="8b06732f-3250-4858-b676-0a0fa0d06f5b.jpeg" alt="Nermin Art">
 
   <h1>Welcome to Nermin Art Studio</h1>
 
