--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 
   <h1>Welcome to Nermin Art Studio</h1>
 
-  <p>
-    I’m Nermin, an artist expressing emotions through art.  
-    أنا نرمين، فنانة بحوّل المشاعر لحكايات مرسومة.
+  <p>    Welcome to my creative space 🤍  
+    I’m Nermin, an artist who turns emotions into visual stories.  
+    Here you’ll find art prints inspired by feelings, growth, and inner peace.
   </p>
 
   <div class="buttons">
