--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
   <h1>Welcome to Nermin Art Studio</h1>
 
-  <p>    
+  <p>   True art is when you feel the painting chose you… not the other way aro 
   </p>
 
   <div class="buttons">
