--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <!-- HERO -->
 <section class="hero" id="home">
-  <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" alt="Nermin Art">
+  <img src="IMG_9352.jpeg" alt="Nermin Art">
 
   <h1>Welcome to Nermin Art Studio</h1>
 
