--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
 </header>
 
 <!-- HERO -->
-<section class="hero" id="home">
-  <img src="IMG_9352.jpeg" alt="Nermin Art">
 
+<div class="hero-images">
+  <img src="IMG_1.jpeg" alt="Art 1">
+  <img src="IMG_2.jpeg" alt="Art 2">
+  <img src="IMG_3.jpeg" alt="Art 3">
+</div>
   <h1>Welcome to Nermin Art Studio</h1>
 
   <p>  
