--- a/index.html
+++ b/index.html
@@ -1,116 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nermin Art</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Nermin Art — Gallery</title>
   <style>
+    * { box-sizing: border-box; margin:0; padding:0; }
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      color: #222;
+      font-family: Arial, Helvetica, sans-serif;
+      background:#fafafa;
+      color:#222;
+      line-height:1.4;
     }
 
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 20px;
-      background: white;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 18px;
+      background:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.06);
+      position:sticky; top:0; z-index:50;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 20px;
-    }
-
-    .menu {
-      font-size: 24px;
-      cursor: pointer;
-    }
+    .logo { font-weight:700; font-size:18px; }
 
     .hero {
-      text-align: center;
-      padding: 30px 15px;
+      max-width:1100px;
+      margin:28px auto;
+      padding:0 16px;
+      text-align:center;
     }
+    .hero h2 { font-size:26px; margin-bottom:8px; }
+    .hero p { color:#555; margin-bottom:18px; max-width:800px; margin-left:auto; margin-right:auto; }
 
-    .hero h2 {
-      font-size: 28px;
-      margin: 20px 0 10px;
-    }
-
-    .hero p {
-      font-size: 16px;
-      opacity: 0.8;
-    }
-
-    /* ===== صور 3 جنب بعض ===== */
+    /* ===== GRID: 3 images side-by-side responsively ===== */
     .hero-images {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      max-width: 1000px;
-      margin: 0 auto 25px;
+      gap: 16px;
+      /* auto-fit creates as many columns as fit; min width 180px */
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      margin: 18px auto 12px;
+      width:100%;
+    }
+
+    .hero-images .card {
+      background:#fff;
+      border-radius:12px;
+      overflow:hidden;
+      box-shadow:0 6px 18px rgba(0,0,0,0.06);
+      display:flex;
+      flex-direction:column;
+      align-items:stretch;
     }
 
     .hero-images img {
-      width: 100%;
-      border-radius: 18px;
-      object-fit: cover;
+      width:100%;
+      height:220px;              /* ثابت للعرض المتناسق */
+      object-fit:cover;          /* crop جميل بدون تشويه */
+      display:block;
     }
+
+    .art-info {
+      padding:12px 14px;
+      text-align:left;
+    }
+    .art-info h3 { margin:0 0 8px 0; font-size:16px; }
+    .art-info .price { color:#3f7a56; font-weight:700; margin-bottom:8px; }
 
     .btn {
-      display: inline-block;
-      background: black;
-      color: white;
-      padding: 14px 26px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-size: 16px;
-      margin-top: 15px;
+      display:inline-block;
+      background:#111;
+      color:#fff;
+      padding:10px 16px;
+      border-radius:20px;
+      text-decoration:none;
+      text-align:center;
+      font-size:14px;
     }
 
-    /* موبايل */
-    @media (max-width: 768px) {
-      .hero-images {
-        grid-template-columns: 1fr;
-      }
+    /* تحسين للموبايل: ارتفاع أصغر، عمود واحد لو ضيق */
+    @media (max-width:480px) {
+      .hero-images img { height:170px; }
+      .hero h2 { font-size:22px; }
     }
   </style>
 </head>
-
 <body>
 
   <header>
-    <h1>Nermin Art</h1>
+    <div class="logo">Nermin Art</div>
     <div class="menu">☰</div>
   </header>
 
-  <section class="hero">
+  <main class="hero">
+    <h2>Welcome to Nermin Art Studio</h2>
+    <p>I’m Nermin — I create art that speaks. Below are some prints available for purchase.</p>
 
-    <!-- الصور -->
+    <!-- ===== THREE IMAGES SIDE-BY-SIDE ===== -->
     <div class="hero-images">
-      <img src="IMG_9352.jpeg" alt="Art 1">
-      <img src="IMG_9352.jpeg" alt="Art 2">
-      <img src="IMG_9352.jpeg" alt="Art 3">
+      <!-- card 1 -->
+      <div class="card">
+        <img src="IMG_9352.jpeg" alt="Art 1">
+        <div class="art-info">
+          <h3>Blossom</h3>
+          <div class="price">EGP 435</div>
+          <a class="btn" href="shop.html">Buy / تسوق</a>
+        </div>
+      </div>
+
+      <!-- card 2 -->
+      <div class="card">
+        <img src="IMG_9352.jpeg" alt="Art 2">
+        <div class="art-info">
+          <h3>Growth</h3>
+          <div class="price">EGP 435</div>
+          <a class="btn" href="shop.html">Buy / تسوق</a>
+        </div>
+      </div>
+
+      <!-- card 3 -->
+      <div class="card">
+        <img src="IMG_9352.jpeg" alt="Art 3">
+        <div class="art-info">
+          <h3>Calm</h3>
+          <div class="price">EGP 435</div>
+          <a class="btn" href="shop.html">Buy / تسوق</a>
+        </div>
+      </div>
     </div>
 
-    <h2>Welcome to Nermin Art Studio</h2>
-
-    <p>
-      True art is when the painting chooses you…  
-      <br>
-      الفن الحقيقي لما اللوحة تختارك مش العكس
+    <p style="margin-top:18px;">
+      <a class="btn" href="shop.html">See all prints / عرض كل اللوحات</a>
     </p>
 
-    <a href="shop.html" class="btn">
-      Shop Art Prints | تسوق اللوحات
-    </a>
-
-  </section>
+  </main>
 
 </body>
 </html>
