--- a/index.html
+++ b/index.html
@@ -1,141 +1,78 @@
-<!DOCTYPE html>
+
+      
+          <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nermin Art — Gallery</title>
-  <style>
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      background:#fafafa;
-      color:#222;
-      line-height:1.4;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nermin Art</title>
 
-    header {
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:14px 18px;
-      background:#fff;
-      box-shadow:0 2px 6px rgba(0,0,0,0.06);
-      position:sticky; top:0; z-index:50;
-    }
-    .logo { font-weight:700; font-size:18px; }
+<style>
+body{
+  margin:0;
+  font-family: Arial, sans-serif;
+  background:#f5f5f5;
+}
 
-    .hero {
-      max-width:1100px;
-      margin:28px auto;
-      padding:0 16px;
-      text-align:center;
-    }
-    .hero h2 { font-size:26px; margin-bottom:8px; }
-    .hero p { color:#555; margin-bottom:18px; max-width:800px; margin-left:auto; margin-right:auto; }
+/* ===== HERO SECTION ===== */
+.hero{
+  padding:40px 20px;
+  text-align:center;
+}
 
-    /* ===== GRID: 3 images side-by-side responsively ===== */
-    .hero-images {
-      display: grid;
-      gap: 16px;
-      /* auto-fit creates as many columns as fit; min width 180px */
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      margin: 18px auto 12px;
-      width:100%;
-    }
+.hero h1{
+  font-size:32px;
+  margin-bottom:10px;
+}
 
-    .hero-images .card {
-      background:#fff;
-      border-radius:12px;
-      overflow:hidden;
-      box-shadow:0 6px 18px rgba(0,0,0,0.06);
-      display:flex;
-      flex-direction:column;
-      align-items:stretch;
-    }
+.hero p{
+  color:#555;
+  margin-bottom:30px;
+}
 
-    .hero-images img {
-      width:100%;
-      height:220px;              /* ثابت للعرض المتناسق */
-      object-fit:cover;          /* crop جميل بدون تشويه */
-      display:block;
-    }
+/* ===== IMAGE GRID ===== */
+.hero-images{
+  display:flex;
+  gap:15px;
+  justify-content:center;
+}
 
-    .art-info {
-      padding:12px 14px;
-      text-align:left;
-    }
-    .art-info h3 { margin:0 0 8px 0; font-size:16px; }
-    .art-info .price { color:#3f7a56; font-weight:700; margin-bottom:8px; }
+.hero-images img{
+  width:100%;
+  max-width:300px;
+  height:400px;
+  object-fit:cover;
+  border-radius:15px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.15);
+}
 
-    .btn {
-      display:inline-block;
-      background:#111;
-      color:#fff;
-      padding:10px 16px;
-      border-radius:20px;
-      text-decoration:none;
-      text-align:center;
-      font-size:14px;
-    }
+/* ===== MOBILE FIX ===== */
+@media (max-width:768px){
+  .hero-images{
+    flex-direction:column;
+    align-items:center;
+  }
 
-    /* تحسين للموبايل: ارتفاع أصغر، عمود واحد لو ضيق */
-    @media (max-width:480px) {
-      .hero-images img { height:170px; }
-      .hero h2 { font-size:22px; }
-    }
-  </style>
+  .hero-images img{
+    max-width:90%;
+    height:auto;
+  }
+}
+</style>
 </head>
+
 <body>
 
-  <header>
-    <div class="logo">Nermin Art</div>
-    <div class="menu">☰</div>
-  </header>
+<section class="hero">
+  <h1>Welcome to Nermin Art Studio</h1>
+  <p>Where art speaks from the heart ✨</p>
 
-  <main class="hero">
-    <h2>Welcome to Nermin Art Studio</h2>
-    <p>I’m Nermin — I create art that speaks. Below are some prints available for purchase.</p>
-
-    <!-- ===== THREE IMAGES SIDE-BY-SIDE ===== -->
-    <div class="hero-images">
-      <!-- card 1 -->
-      <div class="card">
-        <img src="IMG_9352.jpeg" alt="Art 1">
-        <div class="art-info">
-          <h3>Blossom</h3>
-          <div class="price">EGP 435</div>
-          <a class="btn" href="shop.html">Buy / تسوق</a>
-        </div>
-      </div>
-
-      <!-- card 2 -->
-      <div class="card">
-        <img src="IMG_9352.jpeg" alt="Art 2">
-        <div class="art-info">
-          <h3>Growth</h3>
-          <div class="price">EGP 435</div>
-          <a class="btn" href="shop.html">Buy / تسوق</a>
-        </div>
-      </div>
-
-      <!-- card 3 -->
-      <div class="card">
-        <img src="IMG_9352.jpeg" alt="Art 3">
-        <div class="art-info">
-          <h3>Calm</h3>
-          <div class="price">EGP 435</div>
-          <a class="btn" href="shop.html">Buy / تسوق</a>
-        </div>
-      </div>
-    </div>
-
-    <p style="margin-top:18px;">
-      <a class="btn" href="shop.html">See all prints / عرض كل اللوحات</a>
-    </p>
-
-  </main>
+  <div class="hero-images">
+    <img src="IMG_9352.jpeg" alt="Nermin Art">
+    <img src="cover2.jpeg" alt="Nermin Art">
+    <img src="cover3.jpeg" alt="Nermin Art">
+  </div>
+</section>
 
 </body>
 </html>
-  
-  
