--- a/index.html
+++ b/index.html
@@ -169,7 +169,206 @@
   </div>
 
   <!-- IMAGE UNDER BUTTON -->
+  <img src="<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Nermin Art Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #fafafa;
+      color: #222;
+    }
+
+    /* HEADER */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      background: #fff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    #menu-toggle {
+      display: none;
+    }
+
+    .menu-icon {
+      font-size: 26px;
+      cursor: pointer;
+    }
+
+    nav {
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0,0,0,.15);
+      display: none;
+      flex-direction: column;
+      min-width: 160px;
+    }
+
+    nav a {
+      padding: 12px 18px;
+      text-decoration: none;
+      color: #222;
+      border-bottom: 1px solid #eee;
+    }
+
+    nav a:last-child {
+      border-bottom: none;
+    }
+
+    #menu-toggle:checked + label + nav {
+      display: flex;
+    }
+
+    /* HERO */
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .hero img {
+      width: 100%;
+      max-width: 360px;
+      border-radius: 15px;
+      margin-bottom: 25px;
+    }
+
+    .hero h1 {
+      font-size: 28px;
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 16px;
+      max-width: 520px;
+      margin: auto;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+    }
+
+    .btn {
+      padding: 12px 25px;
+      border-radius: 25px;
+      border: none;
+      font-size: 14px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .btn-shop {
+      background: #111;
+      color: #fff;
+    }
+
+    /* IMAGE UNDER BUTTON */
+    .shop-preview {
+      width: 100%;
+      max-width: 320px;
+      margin: 30px auto 0;
+      display: block;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    }
+
+    section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+      color: #777;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  <div class="logo">Nermin Art</div>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="shop.html">Shop</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<!-- HERO -->
+<section class="hero" id="home">
+  <img src="IMG_9352.jpeg" alt="Nermin Art">
+
+  <h1>Welcome to Nermin Art Studio</h1>
+
+  <p>
+    True art is when you feel the painting chose you… not the other way aro
+  </p>
+
+  <div class="buttons">
+    <a href="shop.html" class="btn btn-shop">
+      Shop Art Prints | تسوق اللوحات
+    </a>
+  </div>
+
+  <!-- IMAGE UNDER BUTTON -->
   <img src="IMG_9288.jpeg" class="shop-preview" alt="Art Preview">
+</section>
+
+<!-- ABOUT -->
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    Welcome to my creative space 🤍  
+    I’m Nermin, an artist who turns emotions into visual stories.  
+    Here you’ll find art prints inspired by feelings, growth, and inner peace.
+  </p>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact</h2>
+  <p>
+    WhatsApp: 01XXXXXXXXX  
+    <br>
+    Instagram: @nermin.art
+  </p>
+</section>
+
+<footer>
+  © 2026 Nermin Art Studio
+</footer>
+
+</body>
+</html>" class="shop-preview" alt="Art Preview">
 </section>
 
 <!-- ABOUT -->
