--- a/index.html
+++ b/index.html
@@ -9,132 +9,55 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: #fafafa;
+  background: #f5f5f5;
   color: #222;
 }
 
 /* HEADER */
 header {
+  background: #1f3d1f;
+  color: #fff;
+  padding: 15px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 20px;
-  background: #1f3d1f;
-  color: #fff;
 }
 
 .logo {
+  font-size: 22px;
   font-weight: bold;
-  font-size: 20px;
 }
 
-.menu-icon {
-  font-size: 26px;
-}
-
-/* HERO COVER */
+/* HERO */
 .hero {
-  padding: 40px 15px 60px;
+  padding: 40px 15px 80px;
   text-align: center;
-  background: linear-gradient(#f5f5f5, #ffffff);
+  position: relative;
+  overflow: hidden;
 }
 
-.cover-images {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
-  margin-bottom: 30px;
-}
-
-.cover-images img {
-  width: 46%;
-  max-width: 300px;
-  border-radius: 18px;
-  box-shadow: 0 15px 30px rgba(0,0,0,0.2);
-}
-
-.hero h1 {
-  font-size: 30px;
-  margin-bottom: 12px;
-  font-weight: bold;
-}
-
-.hero p {
-  font-size: 16px;
-  max-width: 520px;
+/* COVER IMAGES */
+.cover-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 720px;
   margin: auto;
-  line-height: 1.6;
-  margin-bottom: 25px;
+  height: 380px;
 }
 
-.btn-shop {
-  display: inline-block;
-  padding: 14px 30px;
-  background: #111;
-  color: #fff;
-  border-radius: 30px;
-  text-decoration: none;
-  font-size: 15px;
+.cover-left {
+  position: absolute;
+  left: 0;
+  top: 50px;
+  width: 55%;
+  transform: rotate(-6deg);
+  border-radius: 18px;
+  box-shadow: 0 25px 40px rgba(0,0,0,0.25);
+  z-index: 1;
 }
 
-/* ABOUT */
-section {
-  padding: 60px 20px;
-  text-align: center;
-}
-
-footer {
-  padding: 20px;
-  font-size: 13px;
-  color: #777;
-  text-align: center;
-}
-</style>
-</head>
-
-<body>
-
-<header>
-  <div class="logo">Nermin Art</div>
-  <div class="menu-icon">☰</div>
-</header>
-
-<!-- HERO -->
-<section class="hero">
-  <div class="cover-images">
-    <img src="IMG_9352.jpeg" alt="Art 1">
-    <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" alt="Art 2">
-  </div>
-
-  <h1>Welcome to Nermin Art Studio</h1>
-
-  <p>
-    Discover unique originals and stunning prints  
-    crafted with passion and emotion.
-  </p>
-
-  <a href="shop.html" class="btn-shop">
-    Shop Art Prints | تسوق اللوحات
-  </a>
-</section>
-
-<!-- ABOUT -->
-<section>
-  <h2>About Me</h2>
-  <p>
-    I’m Nermin, an artist who turns emotions into visual stories.  
-    My art is inspired by faith, growth, and inner peace.
-  </p>
-</section>
-
-<footer>
-  © 2026 Nermin Art Studio
-</footer>
-
-</body>
-</html>
-
+.cover-right {
+  position
 
 
 
