--- a/index.html
+++ b/index.html
@@ -1,206 +1,143 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nermin Art Studio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Nermin Art Studio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #fafafa;
-      color: #222;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #f5f5f5;
+  color: #222;
+}
 
-    /* HEADER */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 20px;
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
+/* HEADER */
+header {
+  background: #1f3d1f;
+  color: #fff;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-    .logo {
-      font-weight: bold;
-      font-size: 20px;
-    }
+.logo {
+  font-size: 22px;
+  font-weight: bold;
+}
 
-    #menu-toggle {
-      display: none;
-    }
+/* HERO */
+.hero {
+  padding: 40px 15px 80px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
 
-    .menu-icon {
-      font-size: 26px;
-      cursor: pointer;
-    }
+/* COVER IMAGES */
+.cover-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 720px;
+  margin: auto;
+  height: 380px;
+}
 
-    nav {
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0,0,0,.15);
-      display: none;
-      flex-direction: column;
-      min-width: 160px;
-    }
+.cover-left {
+  position: absolute;
+  left: 0;
+  top: 50px;
+  width: 55%;
+  transform: rotate(-6deg);
+  border-radius: 18px;
+  box-shadow: 0 25px 40px rgba(0,0,0,0.25);
+  z-index: 1;
+}
 
-    nav a {
-      padding: 12px 18px;
-      text-decoration: none;
-      color: #222;
-      border-bottom: 1px solid #eee;
-    }
+.cover-right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 55%;
+  transform: rotate(6deg);
+  border-radius: 18px;
+  box-shadow: 0 25px 40px rgba(0,0,0,0.25);
+  z-index: 2;
+}
 
-    nav a:last-child {
-      border-bottom: none;
-    }
+/* TEXT */
+.hero h1 {
+  margin-top: 430px;
+  font-size: 32px;
+  font-weight: bold;
+}
 
-    #menu-toggle:checked + label + nav {
-      display: flex;
-    }
+.hero p {
+  font-size: 16px;
+  max-width: 520px;
+  margin: 15px auto 30px;
+  line-height: 1.6;
+}
 
-    /* HERO */
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-    }
+.btn-shop {
+  display: inline-block;
+  padding: 14px 36px;
+  background: #1f3d1f;
+  color: #fff;
+  border-radius: 30px;
+  text-decoration: none;
+  font-size: 15px;
+}
 
-    .hero img {
-      width: 100%;
-      max-width: 360px;
-      border-radius: 15px;
-      margin-bottom: 25px;
-    }
+/* MOBILE */
+@media (max-width: 600px) {
+  .cover-wrapper {
+    height: 300px;
+  }
 
-    .hero h1 {
-      font-size: 28px;
-      margin-bottom: 15px;
-    }
-
-    .hero p {
-      font-size: 16px;
-      max-width: 520px;
-      margin: auto;
-      margin-bottom: 30px;
-      line-height: 1.6;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 12px 25px;
-      border-radius: 25px;
-      border: none;
-      font-size: 14px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    .btn-shop {
-      background: #111;
-      color: #fff;
-    }
-
-    /* IMAGE UNDER BUTTON */
-    .shop-preview {
-      width: 100%;
-      max-width: 320px;
-      margin: 30px auto 0;
-      display: block;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    }
-
-    section {
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 13px;
-      color: #777;
-    }
-  </style>
+  .hero h1 {
+    margin-top: 360px;
+    font-size: 26px;
+  }
+}
+</style>
 </head>
 
 <body>
 
 <header>
   <div class="logo">Nermin Art</div>
-
-  <input type="checkbox" id="menu-toggle">
-  <label for="menu-toggle" class="menu-icon">☰</label>
-
-  <nav>
-    <a href="#">Home</a>
-    <a href="shop.html">Shop</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <div>☰</div>
 </header>
 
-<!-- HERO -->
-<section class="hero" id="home">
-  <img src="IMG_9352.jpeg" alt="Nermin Art">
+<section class="hero">
+
+  <div class="cover-wrapper">
+    <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" class="cover-left" alt="Art cover 1">
+    <img src="IMG_9352.jpeg" class="cover-right" alt="Art cover 2">
+  </div>
 
   <h1>Welcome to Nermin Art Studio</h1>
 
   <p>
-    True art is when you feel the painting chose you… not the other way aro
+    Discover unique originals and stunning prints  
+    crafted with passion and soul.
   </p>
 
-  <div class="buttons">
-    <a href="shop.html" class="btn btn-shop">
-      Shop Art Prints | تسوق اللوحات
-    </a>
-  </div>
+  <a href="shop.html" class="btn-shop">
+    Shop Art Prints | تسوق اللوحات
+  </a>
 
-  <!-- IMAGE UNDER BUTTON -->
-  <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" class="shop-preview" alt="Art Preview">
 </section>
-
-<!-- ABOUT -->
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    Welcome to my creative space 🤍  
-    I’m Nermin, an artist who turns emotions into visual stories.  
-    Here you’ll find art prints inspired by feelings, growth, and inner peace.
-  </p>
-</section>
-
-<!-- CONTACT -->
-<section id="contact">
-  <h2>Contact</h2>
-  <p>
-    WhatsApp: 01XXXXXXXXX  
-    <br>
-    Instagram: @nermin.art
-  </p>
-</section>
-
-<footer>
-  © 2026 Nermin Art Studio
-</footer>
 
 </body>
 </html>
+
+
+
+
+
+
+
