--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ header {
   <div class="cover-wrapper">
     <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" class="cover-left" alt="Art cover 1">
     <img src="IMG_9352.jpeg" class="cover-right" alt="Art cover 2">
-      <img src="IMG_9352.jpeg" class="" alt="Art cover 3">
+      <img src="8b06732f-3250-4858-b676-0a0fa0d06f5b.jpeg" class="" alt="Art cover 3">
   </div>
 
   <h1>Welcome to Nermin Art Studio</h1>
