--- a/index.html
+++ b/index.html
@@ -30,46 +30,20 @@ header {
 
 /* HERO */
 .hero {
-  padding: 40px 15px 80px;
   text-align: center;
-  position: relative;
-  overflow: hidden;
+  padding: 50px 15px 80px;
 }
 
-/* COVER IMAGES */
-.cover-wrapper {
-  position: relative;
-  width: 100%;
-  max-width: 720px;
-  margin: auto;
-  height: 380px;
-}
-
-.cover-left {
-  position: absolute;
-  left: 0;
-  top: 50px;
-  width: 55%;
-  transform: rotate(-6deg);
+/* SINGLE COVER IMAGE */
+.hero img {
+  width: 90%;
+  max-width: 600px;
   border-radius: 18px;
-  box-shadow: 0 25px 40px rgba(0,0,0,0.25);
-  z-index: 1;
+  box-shadow: 0 20px 35px rgba(0,0,0,0.25);
+  margin-bottom: 30px;
 }
 
-.cover-right {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 55%;
-  transform: rotate(6deg);
-  border-radius: 18px;
-  box-shadow: 0 25px 40px rgba(0,0,0,0.25);
-  z-index: 2;
-}
-
-/* TEXT */
 .hero h1 {
-  margin-top: 430px;
   font-size: 32px;
   font-weight: bold;
 }
@@ -93,12 +67,7 @@ header {
 
 /* MOBILE */
 @media (max-width: 600px) {
-  .cover-wrapper {
-    height: 300px;
-  }
-
   .hero h1 {
-    margin-top: 360px;
     font-size: 26px;
   }
 }
@@ -114,11 +83,8 @@ header {
 
 <section class="hero">
 
-  <div class="cover-wrapper">
-    <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" class="cover-left" alt="Art cover 1">
-    <img src="IMG_9352.jpeg" class="cover-right" alt="Art cover 2">
-    
-  </div>
+  <!-- الصورة الوحيدة للغلاف -->
+  <img src="IMG_9352.jpeg" alt="Art cover">
 
   <h1>Welcome to Nermin Art Studio</h1>
 
@@ -135,10 +101,4 @@ header {
 
 </body>
 </html>
-
-
-
-
-
-
 
