--- a/index.html
+++ b/index.html
@@ -1,104 +1,200 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Nermin Art Studio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Nermin Art Studio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f5f5f5;
-  color: #222;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #fafafa;
+      color: #222;
+    }
 
-/* HEADER */
-header {
-  background: #1f3d1f;
-  color: #fff;
-  padding: 15px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    /* HEADER */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      background: #fff;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
 
-.logo {
-  font-size: 22px;
-  font-weight: bold;
-}
+    .logo {
+      font-weight: bold;
+      font-size: 20px;
+    }
 
-/* HERO */
-.hero {
-  text-align: center;
-  padding: 50px 15px 80px;
-}
+    #menu-toggle {
+      display: none;
+    }
 
-/* SINGLE COVER IMAGE */
-.hero img {
-  width: 90%;
-  max-width: 600px;
-  border-radius: 18px;
-  box-shadow: 0 20px 35px rgba(0,0,0,0.25);
-  margin-bottom: 30px;
-}
+    .menu-icon {
+      font-size: 26px;
+      cursor: pointer;
+    }
 
-.hero h1 {
-  font-size: 32px;
-  font-weight: bold;
-}
+    nav {
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0,0,0,.15);
+      display: none;
+      flex-direction: column;
+      min-width: 160px;
+    }
 
-.hero p {
-  font-size: 16px;
-  max-width: 520px;
-  margin: 15px auto 30px;
-  line-height: 1.6;
-}
+    nav a {
+      padding: 12px 18px;
+      text-decoration: none;
+      color: #222;
+      border-bottom: 1px solid #eee;
+    }
 
-.btn-shop {
-  display: inline-block;
-  padding: 14px 36px;
-  background: #1f3d1f;
-  color: #fff;
-  border-radius: 30px;
-  text-decoration: none;
-  font-size: 15px;
-}
+    nav a:last-child {
+      border-bottom: none;
+    }
 
-/* MOBILE */
-@media (max-width: 600px) {
-  .hero h1 {
-    font-size: 26px;
-  }
-}
-</style>
+    #menu-toggle:checked + label + nav {
+      display: flex;
+    }
+
+    /* HERO */
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .hero img {
+      width: 100%;
+      max-width: 360px;
+      border-radius: 15px;
+      margin-bottom: 25px;
+    }
+
+    .hero h1 {
+      font-size: 28px;
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 16px;
+      max-width: 520px;
+      margin: auto;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+    }
+
+    .btn {
+      padding: 12px 25px;
+      border-radius: 25px;
+      border: none;
+      font-size: 14px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .btn-shop {
+      background: #111;
+      color: #fff;
+    }
+
+    /* IMAGE UNDER BUTTON */
+    .shop-preview {
+      width: 100%;
+      max-width: 320px;
+      margin: 30px auto 0;
+      display: block;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    }
+
+    section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 13px;
+      color: #777;
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
   <div class="logo">Nermin Art</div>
-  <div>☰</div>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="shop.html">Shop</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
-<section class="hero">
-
-  <!-- الصورة الوحيدة للغلاف -->
-  <img src="IMG_9352.jpeg" alt="Art cover">
+<!-- HERO -->
+<section class="hero" id="home">
+  <img src="IMG_9352.jpeg" alt="Nermin Art">
 
   <h1>Welcome to Nermin Art Studio</h1>
 
   <p>
-    Discover unique originals and stunning prints  
-    crafted with passion and soul.
+    True art is when you feel the painting chose you… not the other way aro
   </p>
 
-  <a href="shop.html" class="btn-shop">
-    Shop Art Prints | تسوق اللوحات
-  </a>
+  <div class="buttons">
+    <a href="shop.html" class="btn btn-shop">
+      Shop Art Prints | تسوق اللوحات
+    </a>
+  </div>
 
+  <!-- IMAGE UNDER BUTTON -->
+  <img src="24e20025-cecd-4756-828f-a2810703896c.jpeg" class="shop-preview" alt="Art Preview">
 </section>
+
+<!-- ABOUT -->
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    Welcome to my creative space 🤍  
+    I’m Nermin, an artist who turns emotions into visual stories.  
+    Here you’ll find art prints inspired by feelings, growth, and inner peace.
+  </p>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact</h2>
+  <p>
+    WhatsApp: 01XXXXXXXXX  
+    <br>
+    Instagram: @nermin.art
+  </p>
+</section>
+
+<footer>
+  © 2026 Nermin Art Studio
+</footer>
 
 </body>
 </html>
-
