--- a/shop.html
+++ b/shop.html
@@ -74,7 +74,7 @@
 
   <!-- لوحة 1 -->
   <div class="art-card">
-    <img src="IMG_9288.jpeg">
+    <img src="765eb699-657f-4bb9-ae2f-fc799164ea29.jpeg">
     <div class="info">
       <h3>Blossom</h3>
     
