--- a/shop.html
+++ b/shop.html
@@ -86,7 +86,7 @@
 
   <!-- لوحة 2 -->
   <div class="art-card">
-    <img src="IMG_9288.jpeg">
+    <img src="83813eb5-502f-47b5-a0bb-0e48b5907c91.jpeg">
     <div class="info">
       <h3>Growth</h3>
       
